--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: sujaynagaraj# your GitHub user name
+github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
-x_username: @sujnagaraj# your X handle
+x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
