--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,14 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Sujay Nagaraj
+      value: Albert Einstein
+    - name: Date of Birth
+      value: 14th March 1879
+    - name: Languages
+      value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: MD/PhD
-      institution: University of Toronto, Toronto, Canada
-      year: 2026 (Expected)
+    - title: PhD
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
       description:
         - Description 1.
         - Description 2.
@@ -17,9 +21,12 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: BSc (Hon.) - Life Sciences and Computing
-      institution: Queen's University, Kingston, Canada
-      year: 2018
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
+      description:
+        - Description 1.
+        - Description 2.
 
 - title: Experience
   type: time_table
@@ -54,13 +61,23 @@
       institution: University of Zurich, Zurich, Switzerland
       year: 1909 - 1911
 
+- title: Open Source Projects
+  type: time_table
+  contents:
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      year: 2015-now
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 2022
+    - year: 1921
       items: 
-        - CIHR Vanier CGS Scholarship ($150,000) 
-
+        - Nobel Prize in Physics 
+        - Matteucci Medal
+    - year: 2029
+      items: 
+        - Max Planck Medal
 
 - title: Academic Interests
   type: nested_list
